--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,12 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
-  - "nightly" # currently points to 3.6-dev
-# command to install dependencies
+  - "nightly"
+before_script:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 install:
   - pip install .
-# command to run tests
 script:
   - py.test tests/??_test_*.py
